# BioNexus-AI

./: .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  pytest.ini  requirements.txt
backend/app/: config.py
backend/app/core/: constants.py  exceptions.py  security.py
backend/app/models/: __init__.py
